# DMI-Database-AI

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflow/: ci-cd.yml
.github/workflows/: ci-cd.yml
backend/: Dockerfile  classifier.py  clubnoel_dmi.db  database.py  main.py  models.py  seed.py
backend/tests/: test_main.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/tests/: App.test.jsx
