[project]
name = "dmi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "requests>=2.34.2",
    "ruff>=0.15.20",
    "scikit-learn>=1.9.0",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
